# os_typing

./: ANSIBLE.md  DEPLOY.md  Doxyfile  README.md  SECURITY.md  ansible.cfg  atom.xml  db_security.php  index.html  index.php  os-hardening.html  os_typing.c  requirements.yml  site.yml  styles.css
deploy/c-c++ dev/: os_deploy.cs
deploy/linux/: sysctl-os_typing.conf  ufw-setup.sh
deploy/systemd/: os_typing.service
deploy/windows/: hardening.ps1
docs/: architecture.html  aspnet-guide.html  c-cpp-guide.html  deployment.html  index.html  index.md  python-guide.html  quickstart.html
docs/assets/: style.css
docs/config/: ASPNET_CONFIGURATION.md  CMakeLists.txt  C_CPP_CONFIGURATION.md  Makefile  PYTHON3_CONFIGURATION.md  appsettings.json  pytest.ini  requirements.txt
inventory/: hosts.ini
molecule/: README.md
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/tests/: test_default.py
roles/: roles.html
roles/assets/: script.js  style.css
roles/os_hardening/: os_hardening.html
roles/os_hardening/defaults/: main.yml
roles/os_hardening/handlers/: main.yml
roles/os_hardening/tasks/: linux.yml  main.yml  windows.yml
roles/os_hardening/templates/: os_typing.service.j2
roles/os_hardening/vars/: value.html
roles/web_server/: web_server.html
scripts/: build.ps1  build.sh  check_cert_expiry.sh  checks.ps1  generate_cert.ps1  os_hardening_check.sh
scripts/c-c++/: os_controller.cpp  os_controlsystem.cpp
scripts/tests/: os_controlsystem_to_junit.py  run_os_controlsystem_test.ps1  run_os_controlsystem_test.sh
src/: os_checking.c  os_checking.h  os_dbcontrol.c  os_manager.c  terminal.c  terminal.h  terminal_test.c
tests/: hardening_config.json  test_os_hardening.py  tester_config.json  tester_os_config.py
tests/windows/: HardeningTests.ps1  README.md  Run-Tests.ps1  helpers.ps1
